# selfish

./: .0pdd.yml  .travis.yml  BaseBlock.cpp  BaseBlock.h  Block.h  BlockCache.cpp  BlockCache.h  BlockDifficulty.cpp  BlockDifficulty.h  BlockNext.cpp  BlockNext.h  BlockNull.cpp  BlockNull.h  CMakeLists.txt  Chain.h  ChainEmpty.cpp  ChainEmpty.h  ChainFull.cpp  ChainFull.h  ChainRandom.cpp  ChainRandom.h  EmptyChain.cpp  EmptyChain.h  FairMiner.cpp  FairMiner.h  MinedBlocks.cpp  MinedBlocks.h  Miner.h  MinerChainer.cpp  MinerChainer.h  MinerConcerned.cpp  MinerConcerned.h  MinerFair.cpp  MinerFair.h  MinerSelfish.cpp  MinerSelfish.h  MinerTimedSelfish.cpp  MinerTimedSelfish.h  NextBlock.cpp  NextBlock.h  (+4 more)
test/: BaseBlockTest.cpp  BaseBlockTest.h  BlockCacheTest.cpp  BlockCacheTest.h  BlockDifficultyTest.cpp  BlockDifficultyTest.h  BlockNextTest.cpp  BlockNextTest.h  BlockNullTest.cpp  BlockNullTest.h  CMakeLists.txt  ChainRandomTest.cpp  ChainRandomTest.h  main.cpp
